hora de tardanzas

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -122,7 +122,7 @@
                   <% estadoalumno = "Asistencia no registrado" %>
                 <% end %>
               <% else %>
-                <% estadoalumno = "Asistencia no registrado" %>
+                <% estadoalumno = "No autorizado para participar" %>
               <% end %>
             <% end %>
           <% end %>
