--- a/app/views/cuaderno_controles_eventos/_form.html.erb
+++ b/app/views/cuaderno_controles_eventos/_form.html.erb
@@ -17,7 +17,7 @@
   <%= funcion %>
 <% end %>
 
-<%= form_for [@cuaderno_control, @cuaderno_control_evento], :html => { :class => "ui-body ui-body-c" } do |f| %>
+<%= form_for [@cuaderno_control, @cuaderno_control_evento], :html => { :class => "ui-body ui-body-c", :onsubmit => "validarDiaSemana(document.getElementById('cuaderno_control_evento_fecha_evento')" } do |f| %>
   <% if @cuaderno_control_evento.errors.any? %>
     <div id="error_explanation" data-role="header" data-theme="e">
       <%= pluralize(@cuaderno_control_evento.errors.count, "error") %> impidieron que el registro se grabe:
@@ -42,7 +42,7 @@
     Descripción (*)<br/><%= f.text_area :descripcion, :required => "required" %>
   </div>
   <div id="fecha" class="field">
-    Para la fecha<br/><%= f.text_field :fecha_evento, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px", :min => @cuaderno_control.fecha + 1, :max => @cuaderno_control.fecha + 30 %>
+    Para la fecha<br/><%= f.text_field :fecha_evento, "data-mini" => "true", "data-role" => "datebox", "type" => "date", "style" => "width:130px", :min => @cuaderno_control.fecha + 1, :max => @cuaderno_control.fecha + 30, :onchange => "validarDiaSemana(this)" %>
   </div>
   <div class="field">
     <%= f.hidden_field :usuario, :value => current_user.usuario %>
