--- a/app/views/alumnos/inasistencias.html.erb
+++ b/app/views/alumnos/inasistencias.html.erb
@@ -29,7 +29,7 @@
     <%= form_tag(inasistencias_path, {:method => :post, "data-ajax" => "false", "name" => "falta"}) do %>
       <% if can? :grabar_inasistencias, ControlAsistencia %>
         <div>
-          <%= submit_tag "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true", "class" => "ui-btn-right" %>
+          <%= submit_tag "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true", "class" => "ui-btn-right", data: { confirm: "¿Está seguro que desea grabar el registro?" } %>
         </div>
       <% end %>
       <%= hidden_field_tag 'seccion_id', seccion %>
