--- a/app/views/autorizaciones/asistencias_actividades.html.erb
+++ b/app/views/autorizaciones/asistencias_actividades.html.erb
@@ -23,7 +23,7 @@
     <div data-role="fieldcontain">
       Actividad: <%= collection_select(:actividad, :id, @actividades, :id, :nombre_fecha, {:prompt => ':: Seleccione ::', :selected => actividad}, {"data-mini" => "true", :name => "actividad_id", :required => "required"}) %><br />
       Sección: <%= collection_select(:seccion, :id, @secciones, :id, :grado_seccion, {:prompt => ':: Seleccione ::', :selected => seccion}, {"data-mini" => "true", :name => "seccion_id", :required => "required"}) %>
-      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil %>
+      <%= submit_tag "Buscar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "search", "data-mini" => "true", :name => nil, data: { confirm: "¿Está seguro que desea grabar el registro de asistencia?" } %>
     </div>
   <% end %>
   
